--- a/calculadora.css
+++ b/calculadora.css
@@ -5,7 +5,7 @@ body{
 .calculadora{
     width: 350px;
     height: 500px;
-    background-color: #ffe600;
+    background-color: 		#00BFFF;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -20,16 +20,21 @@ body{
     margin-left: 50px;
 }
 button{
-    padding: 10px 6px;
-   
-    border-radius: 5px;
-    border: none;
-    outline: none;
-    background-color: 	yellow;
-    box-shadow: 0 10px 2px #222;
+   font-family: 'Patron';
+   cursor: pointer;
+   outline: none;
+   font-size: 12px;
+   padding: 20px 28px;
+   border-radius: 18px;
+   background: none;
+   transition: box-shadow 0.1s;
+   color: 	#EF6EA0;
+   border: 4px solid 	#f1b;
 }
-button:active{
-transform: translate(10px);
-box-shadow: none;
+button:hover{
+border: 4px solid 	#f1b;
+color: 	#f1b;
+box-shadow: 0px 0px 35px 	#f1b, 0px 0px 15px 	#f1b inset;
+text-shadow: 0px 0px 10px 	#f1b , 0px 0px 3px 	#f1b;
 
 }
