--- a/style2.css
+++ b/style2.css
@@ -138,8 +138,10 @@ body{
   }
   .form{
     position: relative;
-    margin-left: 50px;
-    border-radius: 200px;
+    margin:auto;
+    justify-content: center;
+    text-align: center;
+    
   }
   button{
    font-family: 'Patron';
@@ -154,6 +156,10 @@ body{
    color: 	white;
    border: 4px solid 	#ef6ea0;
    background-color: #ef6ea0;
+   margin:auto;
+    justify-content: center;
+    text-align: center;
+   
   }
   button:hover{
   border: 4px solid 	#ef6ea0;
